# toppy

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  deny.toml  docker-compose.yml  spec.md
.github/workflows/: ci.yml
crates/toppy-cli/: Cargo.toml
crates/toppy-cli/src/: main.rs
crates/toppy-core/: Cargo.toml
crates/toppy-core/src/: audit.rs  auth.rs  config.rs  doctor.rs  lib.rs  policy.rs  rate.rs  test_support.rs
crates/toppy-core/tests/: doctor.rs
crates/toppy-gw/: Cargo.toml  Dockerfile
crates/toppy-gw/src/: main.rs
crates/toppy-gw/testdata/: localhost-cert.pem  localhost-key.pem
crates/toppy-proto/: Cargo.toml
crates/toppy-proto/src/: lib.rs  masque.rs
crates/toppy-proto/tests/: proto.rs
scripts/: e2e-rdp.ps1  e2e-tcp.sh  it-compose.sh
toppy/: spec.md
toppy/.devcontainer/: devcontainer.json
toppy/crates/toppy-cli/: Cargo.toml
toppy/crates/toppy-cli/src/: main.rs
toppy/crates/toppy-core/: Cargo.toml
toppy/crates/toppy-core/src/: doctor.rs
toppy/crates/toppy-proto/src/: lib.rs
