[package]
name = "toppy-core"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ipnet = "2.9"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
