[package]
name = "toppy-core"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ipnet = "2.9"
libc = "0.2"
jsonwebtoken = "9.3"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
ring = "0.17"
