[package]
name = "toppy-gw"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
toppy-core = { path = "../toppy-core" }
tiny_http = "0.12"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
