[package]
name = "toppy-gw"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
toppy-core = { path = "../toppy-core" }
tiny_http = "0.12"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
http = "1.1"
bytes = "1"
h3-datagram = "0.0.2"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
